--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "fave-api.js",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.19.2",
     "pg": "^8.11.5",
